--- a/about.css
+++ b/about.css
@@ -24,7 +24,7 @@ body {
   }
 
 .hero-section {
-    background-image: url("assets/disg5.jpg");
+    background-image: url("disg5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
