--- a/contect.css
+++ b/contect.css
@@ -98,7 +98,7 @@ p {
 
 
 .contact-header {
-    background-image: url("assets/papular1.webp");
+    background-image: url("papular1.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
