--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   }
  
 .hero-section {
-    background-image: url("assets/homeimage.webp");
+    background-image: url("homeimage.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
